<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/appIvLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/extraLarge"
        android:layout_gravity="center"
        android:alpha="1"
        android:src="@drawable/paper_plane" />

    <LinearLayout
        android:id="@+id/llFormLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/appIvEmail"
                android:layout_width="@dimen/iv"
                android:layout_height="@dimen/iv"
                android:padding="@dimen/small"
                android:src="@drawable/ic_email" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtEmail"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/appIvEmail"
                android:layout_alignTop="@id/appIvEmail"
                android:layout_toRightOf="@id/appIvEmail"
                android:background="@null"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFFFFF"
                android:layout_below="@id/appEdtEmail" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/appIvPassword"
                android:layout_width="@dimen/iv"
                android:layout_height="@dimen/iv"
                android:padding="@dimen/small"
                android:src="@drawable/ic_password"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/appEdtPassword"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/appIvPassword"
                android:layout_alignTop="@id/appIvPassword"
                android:layout_toRightOf="@id/appIvPassword"
                android:background="@null"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/appEdtPassword"
                android:background="#FFFFFF" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rvBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:alpha="1">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appTvLogin"
            style="@style/TextSemiBoldSizeRegular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/huge"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_login_button"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/colorNormalEditText"/>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appTvForgotPassword"
        style="@style/TextSemiBoldSizeRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:text="@string/forgot_your_password"
        android:layout_marginTop="@dimen/medium"
        android:alpha="0"
        android:padding="@dimen/small"
        android:layout_gravity="right"
        android:textColor="@color/colorNormalEditText" />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/medium"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/llSocialLogin"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivAppFacebookLogin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_facebook" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivAppGoogleLogin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/ic_google" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:alpha="0"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextRegularSizeRegular"
            android:padding="@dimen/small"
            android:text="@string/login_no_account"
            android:textColor="#cccccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tiny"
            android:padding="@dimen/small"
            android:text="@string/sign_up"
            style="@style/TextSemiBoldSizeRegular"
            android:textColor="@color/colorNormalEditText" />

    </LinearLayout>

</LinearLayout>




